--- a/style.css
+++ b/style.css
@@ -470,7 +470,6 @@ body {
     
 }
 
-
 #page2 {
     background-color: #f0f0f0;
     color: #555;
@@ -491,7 +490,6 @@ body {
     text-align: center;
 }
 
-
 .education-item {
     display: flex;
     align-items: center;
@@ -508,8 +506,9 @@ body {
 .education-logo {
     flex-shrink: 0;
     margin-right: 25px;
-    width: 80px;
-    height: 80px;
+    /* NOVO AUMENTO PARA TELAS MAIORES (Notebooks/Desktops) */
+    width: 110px; /* Aumentado de 100px para 110px */
+    height: 110px; /* Aumentado de 100px para 110px */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -542,7 +541,6 @@ body {
     line-height: 1.4;
 }
 
-
 .education-location {
     flex-shrink: 0;
     margin-left: 25px;
@@ -556,7 +554,6 @@ body {
     height: 40px;
     flex-shrink: 0;
 }
-
 
 .location-details {
     display: flex;
@@ -573,19 +570,16 @@ body {
     white-space: nowrap;
 }
 
-
 .location-details p:nth-child(2) {
     white-space: normal;
     word-break: break-word;
     max-width: 120px;
     text-align: right;
-    
 }
 
-
+/* --- Media Queries --- */
 
 @media (max-width: 768px) {
-
     .education-item {
         flex-direction: column;
         align-items: center;
@@ -596,6 +590,9 @@ body {
     .education-logo {
         margin-right: 0;
         margin-bottom: 15px;
+        /* NOVO AUMENTO PARA TELAS ENTRE 768px E 480px (Tablets/Notebooks menores) */
+        width: 90px; /* Aumentado de 80px para 90px */
+        height: 90px; /* Aumentado de 80px para 90px */
     }
 
     .education-details {
@@ -603,7 +600,6 @@ body {
         margin-bottom: 15px;
     }
 
-    
     .education-location {
         margin-left: 0;
         flex-direction: column;
@@ -619,75 +615,83 @@ body {
     .location-details {
         align-items: center;
     }
-    
-    
+
     .location-details p:nth-child(2) {
         text-align: center;
         max-width: none;
     }
 
     #page2 h2 {
-        font-size: 1.5em; /* Ajuste para telas entre 768px e 480px */
+        font-size: 1.5em;
     }
 }
 
 @media (max-width: 480px) {
-    
-
     .education-item {
         padding: 15px;
     }
+
     .education-logo {
-        width: 60px;
-        height: 60px;
+        /* NOVO AUMENTO PARA TELAS MENORES QUE 480px (Celulares) */
+        width: 85px; /* Aumentado de 75px para 85px */
+        height: 85px; /* Aumentado de 75px para 85px */
     }
+
     .education-details h3 {
         font-size: 1.1em;
     }
+
     .education-details p {
         font-size: 0.85em;
     }
+
     .education-location svg {
         width: 30px;
         height: 30px;
     }
+
     .location-details p {
         font-size: 0.8em;
     }
 
     #page2 h2 {
-        font-size: 1.3em; /* Ajuste para telas menores que 480px */
+        font-size: 1.3em;
     }
 }
 
 @media (max-height: 480px) and (orientation: landscape) {
-    
     .education-item {
         padding: 15px 20px;
     }
+
     .education-logo {
-        width: 60px;
-        height: 60px;
+        /* NOVO AUMENTO PARA TELAS PAISAGEM (Celulares em modo paisagem) */
+        width: 85px; /* Aumentado de 75px para 85px */
+        height: 85px; /* Aumentado de 75px para 85px */
         margin-right: 15px;
     }
+
     .education-details h3 {
         font-size: 1.1em;
     }
+
     .education-details p {
         font-size: 0.85em;
     }
+
     .education-location {
         margin-left: 15px;
     }
+
     .education-location svg {
         width: 30px;
         height: 30px;
     }
+
     .location-details p {
         font-size: 0.8em;
     }
 }
-
 
 
 
